[tool.poetry]
    name = "lihzahrd"
    version = "3.0.0"
    description = "A Terraria world parser in Python"
    authors = ["Martin George <marty@dii.ngo>", "Stefano Pigozzi <ste.pigozzi@gmail.com>"]
    license = "AGPL-3.0+"
    readme = "README.md"
    homepage = "https://github.com/martydingo/lihzahrd"
    documentation = "https://gh.steffo.eu/lihzahrd/"
    classifiers = [
        "Development Status :: 4 - Beta",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9"
    ]

# Library dependencies
[tool.poetry.dependencies]
    python = "^3.6.2"

# Development dependencies
[tool.poetry.dev-dependencies]
    pytest = "^5.2.1"
    sphinx = "^2.2.1"
    sphinx_rtd_theme = "^0.4.3"
    black = "^22.1.0"

# Optional dependencies
[tool.poetry.extras]

# Code style
[tool.black]
line-length = 120
target-version = ['py36']

# Used build system
[build-system]
    requires = ["poetry>=0.12"]
    build-backend = "poetry.masonry.api"
